treeleaf/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-task-service
spec:
  selector:
    app: react-task
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
